# Toolkit-PDF

./: MANIFEST.in  README.md  environment.txt  pyproject.toml  vps_connection.example.json
package_test_venv/: pyvenv.cfg
package_test_venv/Scripts/: activate  activate.bat
pdf-html-toolkit-github/: .gitignore  GITHUB_SETUP.md  README.md  REBUILD_ON_SERVER.txt  ai.txt  ai_sitemap.json  lovable_prompt.md  requirements.txt
pdf-html-toolkit-github/pdf_html_toolkit/: __init__.py
pdf-html-toolkit-github/workflow/: pdf-html-toolkit.service.example
pdf_html_toolkit.egg-info/: SOURCES.txt  top_level.txt
repo_test_venv/: pyvenv.cfg
repo_test_venv/Scripts/: activate  activate.bat
workflow/: WORKFLOW.md  pdf-html-toolkit.timer.example  run_pdf_html_workflow.sh  vps.env.example
